--- a/main.ipynb
+++ b/main.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from collections import defaultdict\n",
     "import json\n",
     "\n",
     "with open(\"in-prompts.json\", \"r\") as file:\n",
@@ -15,23 +16,16 @@
     "    results = []\n",
     "\n",
     "    for line in file:\n",
-    "        results.append(json.loads(line))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from collections import defaultdict\n",
+    "        results.append(json.loads(line))\n",
     "\n",
     "counts = defaultdict(lambda:defaultdict(int))\n",
+    "times = defaultdict(lambda:defaultdict(int))\n",
     "\n",
     "for result in results:\n",
     "    counts[result.get(\"runner\", \"unknown\")][result.get(\"model\", \"not-a-model\")] += 1\n",
+    "    times[result.get(\"runner\", \"unknown\")][result.get(\"model\", \"not-a-model\")] += result.get(\"elapsed_time\", 0)\n",
     "\n",
-    "print(json.dumps(counts, ensure_ascii=False, indent=2))"
+    "print(json.dumps({\"counts\": counts, \"times\": times}, ensure_ascii=False, indent=2))"
    ]
   }
  ],
