--- a/main.ipynb
+++ b/main.ipynb
@@ -7,25 +7,57 @@
    "outputs": [],
    "source": [
     "from collections import defaultdict\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
     "import json\n",
     "\n",
+    "task_ids = set([2,255,4,135,8,137,138,136,7,269,397,15,17,18,276,21,152,286,159,160,161,164,46,181,196,203,209,84,85,217,352,230,105,235,239,246,249,378,251,127])\n",
+    "ollama_models = [\"llama2-uncensored:7b\", \"deepseek-r1:7b\", \"qwen2.5:14b\", \"phi4:14b\", \"deepseek-r1:32b\", \"qwen2.5:32b\", \"command-r:latest\", \"dolphin-mixtral:8x7b\", \"deepseek-r1:70b\", \"llama3.3:70b\"]\n",
+    "oai_models = [\"gpt-4o\", \"o1-mini\", \"o1-preview\"]\n",
+    "models = set(ollama_models + oai_models)\n",
+    "\n",
     "with open(\"in-prompts.json\", \"r\") as file:\n",
-    "    tasks = list(enumerate(json.load(file)))\n",
+    "    prompts = json.load(file)\n",
     "\n",
     "with open(\"out-results.json.log\", \"r\") as file:\n",
     "    results = []\n",
     "\n",
     "    for line in file:\n",
-    "        results.append(json.loads(line))\n",
+    "        item = json.loads(line)\n",
     "\n",
-    "counts = defaultdict(lambda:defaultdict(int))\n",
-    "times = defaultdict(lambda:defaultdict(int))\n",
+    "        if item.get(\"task_id\") in task_ids and item.get(\"model\") in models and \"result\" in item and \"elapsed_time\" in item:\n",
+    "            results.append(item)\n",
+    "\n",
+    "items = defaultdict(lambda:defaultdict(dict))\n",
     "\n",
     "for result in results:\n",
-    "    counts[result.get(\"runner\", \"unknown\")][result.get(\"model\", \"not-a-model\")] += 1\n",
-    "    times[result.get(\"runner\", \"unknown\")][result.get(\"model\", \"not-a-model\")] += result.get(\"elapsed_time\", 0)\n",
+    "    model = result.get(\"model\", \"not-a-model\")\n",
+    "    runner = \"oai\" if (model in [\"gpt-4o\", \"o1-mini\"]) else result.get(\"runner\", \"unknown\")\n",
+    "    task_id = result.get(\"task_id\")\n",
+    "    response_text = None\n",
     "\n",
-    "print(json.dumps({\"counts\": counts, \"times\": times}, ensure_ascii=False, indent=2))"
+    "    try:\n",
+    "        response_text = result[\"result\"][\"message\"][\"content\"]\n",
+    "    except Exception:\n",
+    "        pass\n",
+    "\n",
+    "    try:\n",
+    "        response_text = result[\"result\"][\"choices\"][0][\"message\"][\"content\"]\n",
+    "    except Exception:\n",
+    "        pass\n",
+    "\n",
+    "    items[runner][model][task_id] = len(prompts[task_id] + response_text) / result.get(\"elapsed_time\")\n",
+    "\n",
+    "for runner in items.keys():\n",
+    "    items[runner] = {k: v for k, v in items[runner].items() if len(v) == len(task_ids)}\n",
+    "\n",
+    "    for model in items[runner].keys():\n",
+    "        values = list(items[runner][model].values())\n",
+    "        start, end = np.percentile(values, 10), np.percentile(values, 90)\n",
+    "        items[runner][model] = f\"{int(start)}-{int(end)}\"\n",
+    "\n",
+    "# print(json.dumps(items, ensure_ascii=False, indent=2))\n",
+    "pd.DataFrame.from_dict(items, orient='index')"
    ]
   }
  ],
