--- a/main.ipynb
+++ b/main.ipynb
@@ -56,8 +56,8 @@
     "        start, end = np.percentile(values, 10), np.percentile(values, 90)\n",
     "        items[runner][model] = f\"{int(start)}-{int(end)}\"\n",
     "\n",
-    "# print(json.dumps(items, ensure_ascii=False, indent=2))\n",
-    "pd.DataFrame.from_dict(items, orient='index')"
+    "print(json.dumps(items, ensure_ascii=False, indent=2))\n",
+    "# pd.DataFrame.from_dict(items, orient='index')"
    ]
   }
  ],
