--- a/main.ipynb
+++ b/main.ipynb
@@ -2,13 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from collections import defaultdict\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
     "import json\n",
     "\n",
     "task_ids = set([2,255,4,135,8,137,138,136,7,269,397,15,17,18,276,21,152,286,159,160,161,164,46,181,196,203,209,84,85,217,352,230,105,235,239,246,249,378,251,127])\n",
@@ -20,44 +18,55 @@
     "    prompts = json.load(file)\n",
     "\n",
     "with open(\"out-results.json.log\", \"r\") as file:\n",
-    "    results = []\n",
+    "    runs = defaultdict(dict)\n",
     "\n",
     "    for line in file:\n",
     "        item = json.loads(line)\n",
+    "        model = item.get(\"model\")\n",
+    "        runner = \"oai\" if (model in [\"gpt-4o\", \"o1-mini\"]) else item.get(\"runner\", \"unknown\")\n",
+    "        task_id = item.get(\"task_id\")\n",
     "\n",
-    "        if item.get(\"task_id\") in task_ids and item.get(\"model\") in models and \"result\" in item and \"elapsed_time\" in item:\n",
-    "            results.append(item)\n",
+    "        if task_id in task_ids and model in models and \"result\" in item and \"elapsed_time\" in item:\n",
+    "            runs[(runner, model)][task_id] = item"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
     "\n",
-    "items = defaultdict(lambda:defaultdict(dict))\n",
+    "stats = defaultdict(lambda:defaultdict(lambda:\"N/A\"))\n",
     "\n",
-    "for result in results:\n",
-    "    model = result.get(\"model\", \"not-a-model\")\n",
-    "    runner = \"oai\" if (model in [\"gpt-4o\", \"o1-mini\"]) else result.get(\"runner\", \"unknown\")\n",
-    "    task_id = result.get(\"task_id\")\n",
-    "    response_text = None\n",
-    "\n",
+    "def get_text(result):\n",
     "    try:\n",
-    "        response_text = result[\"result\"][\"message\"][\"content\"]\n",
+    "        return result[\"result\"][\"message\"][\"content\"]\n",
     "    except Exception:\n",
-    "        pass\n",
+    "        try:\n",
+    "            return result[\"result\"][\"choices\"][0][\"message\"][\"content\"]\n",
+    "        except Exception:\n",
+    "            return None\n",
     "\n",
-    "    try:\n",
-    "        response_text = result[\"result\"][\"choices\"][0][\"message\"][\"content\"]\n",
-    "    except Exception:\n",
-    "        pass\n",
+    "for (runner, model), value in runs.items():\n",
+    "    if len(value) == len(task_ids):\n",
+    "        perfs = [len(prompts[task_id] + get_text(result)) / result.get(\"elapsed_time\") for task_id, result in value.items()]\n",
+    "        # stats[runner][model] = f\"{int(np.percentile(perfs, 10))}-{int(np.percentile(perfs, 90))}\"\n",
+    "        stats[runner][model] = int(np.percentile(perfs, 50))\n",
     "\n",
-    "    items[runner][model][task_id] = len(prompts[task_id] + response_text) / result.get(\"elapsed_time\")\n",
+    "print(json.dumps(stats, ensure_ascii=False, indent=2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
     "\n",
-    "for runner in items.keys():\n",
-    "    items[runner] = {k: v for k, v in items[runner].items() if len(v) == len(task_ids)}\n",
-    "\n",
-    "    for model in items[runner].keys():\n",
-    "        values = list(items[runner][model].values())\n",
-    "        start, end = np.percentile(values, 10), np.percentile(values, 90)\n",
-    "        items[runner][model] = f\"{int(start)}-{int(end)}\"\n",
-    "\n",
-    "print(json.dumps(items, ensure_ascii=False, indent=2))\n",
-    "# pd.DataFrame.from_dict(items, orient='index')"
+    "pd.DataFrame({runner: [data[model] for model in ollama_models] for runner, data in stats.items()})"
    ]
   }
  ],
