--- a/main.ipynb
+++ b/main.ipynb
@@ -8,6 +8,7 @@
    "source": [
     "from collections import defaultdict\n",
     "import json\n",
+    "import os\n",
     "\n",
     "task_ids = set([2,255,4,135,8,137,138,136,7,269,397,15,17,18,276,21,152,286,159,160,161,164,46,181,196,203,209,84,85,217,352,230,105,235,239,246,249,378,251,127])\n",
     "ollama_models = [\"llama2-uncensored:7b\", \"deepseek-r1:7b\", \"qwen2.5:14b\", \"phi4:14b\", \"deepseek-r1:32b\", \"qwen2.5:32b\", \"command-r:latest\", \"dolphin-mixtral:8x7b\", \"deepseek-r1:70b\", \"llama3.3:70b\"]\n",
@@ -17,17 +18,21 @@
     "with open(\"in-prompts.json\", \"r\") as file:\n",
     "    prompts = json.load(file)\n",
     "\n",
-    "with open(\"out-results.json.log\", \"r\") as file:\n",
-    "    runs = defaultdict(dict)\n",
+    "runs = defaultdict(dict)\n",
     "\n",
-    "    for line in file:\n",
-    "        item = json.loads(line)\n",
-    "        model = item.get(\"model\")\n",
-    "        runner = \"oai\" if (model in [\"gpt-4o\", \"o1-mini\"]) else item.get(\"runner\", \"unknown\")\n",
-    "        task_id = item.get(\"task_id\")\n",
+    "for file in os.listdir(\".\"):\n",
+    "    if not file.startswith(\"out-results\"):\n",
+    "        continue\n",
     "\n",
-    "        if task_id in task_ids and model in models and \"result\" in item and \"elapsed_time\" in item:\n",
-    "            runs[(runner, model)][task_id] = item"
+    "    with open(file, \"r\") as file:\n",
+    "        for line in file:\n",
+    "            item = json.loads(line)\n",
+    "            model = item.get(\"model\")\n",
+    "            runner = \"oai\" if (model in [\"gpt-4o\", \"o1-mini\"]) else item.get(\"runner\", \"unknown\")\n",
+    "            task_id = item.get(\"task_id\")\n",
+    "\n",
+    "            if task_id in task_ids and model in models and \"result\" in item and \"elapsed_time\" in item:\n",
+    "                runs[(runner, model)][task_id] = item"
    ]
   },
   {
