--- a/main.ipynb
+++ b/main.ipynb
@@ -55,10 +55,11 @@
     "            return None\n",
     "\n",
     "for (runner, model), value in runs.items():\n",
-    "    if len(value) == len(task_ids):\n",
-    "        perfs = [len(prompts[task_id] + get_text(result)) / result.get(\"elapsed_time\") for task_id, result in value.items()]\n",
+    "    stats[runner][model] = len(value)\n",
+    "    # if len(value) == len(task_ids):\n",
+    "        # perfs = [len(prompts[task_id] + get_text(result)) / result.get(\"elapsed_time\") for task_id, result in value.items()]\n",
     "        # stats[runner][model] = f\"{int(np.percentile(perfs, 10))}-{int(np.percentile(perfs, 90))}\"\n",
-    "        stats[runner][model] = int(np.percentile(perfs, 50))\n",
+    "        # stats[runner][model] = int(np.percentile(perfs, 50))\n",
     "\n",
     "print(json.dumps(stats, ensure_ascii=False, indent=2))"
    ]
