--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,12 +40,35 @@
     "            results.append({\n",
     "                \"runner\": runners[runner],\n",
     "                \"model\": models[model],\n",
+    "                \"_runner\": runner,\n",
+    "                \"_model\": model,\n",
     "                \"prompt_id\": prompt_id,\n",
+    "                \"prompt\": prompts[prompt_id],\n",
+    "                \"answer\": get_text(result),\n",
     "                \"total_len\": len(prompts[prompt_id]) + len(get_text(result)),\n",
     "                \"elapsed_time\": result[\"elapsed_time\"]\n",
     "            })\n",
     "\n",
     "df = pd.DataFrame(results).drop_duplicates(subset=[\"runner\", \"model\", \"prompt_id\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "deduped = {}\n",
+    "\n",
+    "for r in results:\n",
+    "    if r[\"_model\"] == \"o1-preview\":\n",
+    "        continue\n",
+    "\n",
+    "    item = {\"runner\": r[\"_runner\"], \"model\": r[\"_model\"], \"prompt_id\": r[\"prompt_id\"], \"prompt\": r[\"prompt\"], \"answer\": r[\"answer\"]}\n",
+    "    deduped[(r[\"_model\"], r[\"prompt_id\"])] = item\n",
+    "\n",
+    "with open(\"./eval/data.json\", \"w\") as file:\n",
+    "    json.dump(list(deduped.values()), file, ensure_ascii=False)"
    ]
   },
   {
@@ -56,11 +79,7 @@
    "source": [
     "df_count = df.groupby([\"runner\", \"model\"]).size().reset_index(name=\"num_items\")\n",
     "\n",
-    "df_count.pivot(\n",
-    "    index=\"model\",\n",
-    "    columns=\"runner\",\n",
-    "    values=\"num_items\"\n",
-    ")\n"
+    "df_count.pivot(index=\"model\", columns=\"runner\", values=\"num_items\")"
    ]
   },
   {
