--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,11 +64,19 @@
     "    if r[\"_model\"] == \"o1-preview\":\n",
     "        continue\n",
     "\n",
-    "    item = {\"runner\": r[\"_runner\"], \"model\": r[\"_model\"], \"prompt_id\": r[\"prompt_id\"], \"prompt\": r[\"prompt\"], \"answer\": r[\"answer\"]}\n",
-    "    deduped[(r[\"_model\"], r[\"prompt_id\"])] = item\n",
+    "    deduped[f'{r[\"_model\"]},{r[\"prompt_id\"]}'] = r[\"prompt\"] + \"\\n\\n---------\\n\\n\" + r[\"answer\"]\n",
     "\n",
-    "with open(\"./eval/data.json\", \"w\") as file:\n",
-    "    json.dump(list(deduped.values()), file, ensure_ascii=False)"
+    "with open(\"./ai-score/items.json\", \"w\") as file:\n",
+    "    json.dump(deduped, file, ensure_ascii=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(deduped)"
    ]
   },
   {
@@ -78,7 +86,6 @@
    "outputs": [],
    "source": [
     "df_count = df.groupby([\"runner\", \"model\"]).size().reset_index(name=\"num_items\")\n",
-    "\n",
     "df_count.pivot(index=\"model\", columns=\"runner\", values=\"num_items\")"
    ]
   },
