--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
     "    if r[\"_model\"] == \"o1-preview\":\n",
     "        continue\n",
     "\n",
-    "    deduped[f'{r[\"_model\"]},{r[\"prompt_id\"]}'] = r[\"prompt\"] + \"\\n\\n---------\\n\\n\" + r[\"answer\"]\n",
+    "    deduped[f'{r[\"_model\"]},{r[\"prompt_id\"]}'] = \"## Question:\\n\" + r[\"prompt\"] + \"\\n\\n---------\\n## Answer:\\n\\n\" + r[\"answer\"]\n",
     "\n",
     "with open(\"./ai-score/items.json\", \"w\") as file:\n",
     "    json.dump(deduped, file, ensure_ascii=False)"
