--- a/main.ipynb
+++ b/main.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,19 +64,10 @@
     "    if r[\"_model\"] == \"o1-preview\":\n",
     "        continue\n",
     "\n",
-    "    deduped[f'{r[\"_model\"]},{r[\"prompt_id\"]}'] = \"## Question:\\n\" + r[\"prompt\"] + \"\\n\\n---------\\n## Answer:\\n\\n\" + r[\"answer\"]\n",
+    "    deduped[f'{r[\"_model\"]},{r[\"prompt_id\"]}'] = [r[\"prompt\"], r[\"answer\"]]\n",
     "\n",
-    "with open(\"./ai-score/items.json\", \"w\") as file:\n",
+    "with open(\"./ai-score/items2.json\", \"w\") as file:\n",
     "    json.dump(deduped, file, ensure_ascii=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(deduped)"
    ]
   },
   {
