--- a/main.ipynb
+++ b/main.ipynb
@@ -2,6 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3869"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "runs = []\n",
+    "prompts = {}\n",
+    "\n",
+    "with open(\"main.json.log\", \"r\") as file:\n",
+    "    for line in file:\n",
+    "        item = json.loads(line)\n",
+    "\n",
+    "        if \"task_id\" in item and \"prompt\" in item:\n",
+    "            prompts[item[\"task_id\"]] = item[\"prompt\"]\n",
+    "        elif \"runner\" in item:\n",
+    "            runs.append(item)\n",
+    "\n",
+    "len(runs)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
