--- a/main.ipynb
+++ b/main.ipynb
@@ -2,20 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3869"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "\n",
@@ -26,13 +15,20 @@
     "    for line in file:\n",
     "        item = json.loads(line)\n",
     "\n",
-    "        if \"task_id\" in item and \"prompt\" in item:\n",
-    "            prompts[item[\"task_id\"]] = item[\"prompt\"]\n",
+    "        if \"prompt_id\" in item and \"prompt\" in item:\n",
+    "            prompts[item[\"prompt_id\"]] = item[\"prompt\"]\n",
     "        elif \"runner\" in item:\n",
     "            runs.append(item)\n",
     "\n",
     "len(runs)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
