--- a/main.ipynb
+++ b/main.ipynb
@@ -2,47 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "\n",
-    "prompts, runs = {}, []\n",
-    "\n",
-    "prompts_typed = []\n",
+    "prompts, names, runs = {}, {}, []\n",
     "\n",
     "with open(\"main.json.log\", \"r\") as file:\n",
     "    for line in file:\n",
     "        item = json.loads(line)\n",
     "\n",
-    "        if \"prompt_id\" in item and \"prompt\" in item:\n",
+    "        if item[\"type\"] == \"name\":\n",
+    "            names[item[\"key\"]] = item[\"name\"]\n",
+    "        elif item[\"type\"] == \"prompt\":\n",
     "            prompts[item[\"prompt_id\"]] = item[\"prompt\"]\n",
-    "            prompts_typed.append({\"type\": \"prompt\", \"prompt_id\": item[\"prompt_id\"], \"prompt\": item[\"prompt\"]})\n",
-    "        elif \"runner\" in item:\n",
-    "            runs.append(item)\n",
-    "\n",
-    "len(prompts), len(runs)\n"
+    "        elif item[\"type\"] == \"run\":\n",
+    "            runs.append(item)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "runs = [{\"type\": \"run\", \"runner\": r[\"runner\"], \"model\": r[\"model\"], \"prompt_id\": r[\"prompt_id\"], \"elapsed_time\": r[\"elapsed_time\"], \"result\": r[\"result\"]} for r in runs]\n",
-    "names = {\"gpt-4o\": \"ChatGPT 4o\", \"o1-mini\": \"o1-mini\", \"llama2-uncensored:7b\": \"Llama 2 uncensored 7B (3.8 GB)\", \"deepseek-r1:7b\": \"DeepSeek-R1 7B (4.7 GB)\", \"qwen2.5:14b\": \"Qwen2.5 14B (9.0 GB)\", \"phi4:14b\": \"Phi-4 14B (9.1 GB)\", \"deepseek-r1:32b\": \"DeepSeek-R1 32B (19 GB)\", \"qwen2.5:32b\": \"Qwen2.5 32B (19 GB)\", \"command-r:latest\": \"Command R 35B (18 GB)\", \"dolphin-mixtral:8x7b\": \"Dolphin Mixtral 8x7B (26 GB)\", \"deepseek-r1:70b\": \"DeepSeek-R1 70B (42 GB)\", \"llama3.3:70b\": \"Llama 3.3 70B (42 GB)\", \"oai\": \"OpenAI API\", \"m3-max\": \"Mac M3 Max 128GB\", \"rtx-4090\": \"RTX 4090 24GB\", \"rtx-5090\": \"RTX 5090 32GB\", 'rtx-5090-cpu': \"RTX 5090 16-core CPU\", 'rtx-5090-cpu-96': \"RTX 5090 96-core CPU\", \"rtx-a6000\": \"RTX A6000 48GB\", \"rtx-6000ada\": \"RTX 6000Ada 48GB\", \"dual-rtx-4090\": \"Dual RTX 4090 24GB\", \"dual-rtx-5090\": \"Dual RTX 5090 32GB\", \"a100\": \"A100 SXM4 40GB\"}\n",
-    "key_ids = {v: k for k, v in enumerate(list(names.keys()) + [\"m1\",\"deepseek-r1:1.5b\",'o1-preview', 'llama3.2:1b'])}\n",
-    "names = [{\"type\": \"name\", \"key\": key, \"name\": name} for key, name in names.items()]\n",
-    "\n",
-    "# runs, names, prompts_typed\n",
-    "\n",
-    "runs.sort(key=lambda r:key_ids[r[\"runner\"]] * 1000_000 + key_ids[r[\"model\"]] * 1000 + r[\"prompt_id\"])\n",
-    "\n",
-    "with open(\"new.json.log\",\"w\") as file:\n",
-    "    for item in names +prompts_typed + runs:\n",
-    "        file.write(json.dumps(item, ensure_ascii=False) + \"\\n\")"
+    "runs"
    ]
   },
   {
