--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
     "\n",
     "        if item[\"type\"] == \"name\":\n",
     "            names[item[\"key\"]] = item[\"name\"]\n",
-    "        elif item[\"type\"] == \"prompt\":\n",
+    "        elif item[\"type\"] == \"prompt\" and item.get(\"main\"):\n",
     "            prompts[item[\"prompt_id\"]] = item[\"prompt\"]\n",
     "        elif item[\"type\"] == \"run\":\n",
     "            runs.append(item)"
@@ -40,12 +40,6 @@
     "import pandas as pd\n",
     "import json\n",
     "\n",
-    "prompts_corpus = set([2,255,4,135,8,137,138,136,7,269,397,15,17,18,276,21,152,286,159,160,161,164,46,181,196,203,209,84,85,217,352,230,105,235,239,246,249,378,251,127])\n",
-    "runners = {\"oai\": \"OpenAI API\", \"m3-max\": \"Mac M3 Max 128GB\", \"rtx-4090\": \"RTX 4090 24GB\", \"rtx-5090\": \"RTX 5090 32GB\", \"rtx-a6000\": \"RTX A6000 48GB\", \"rtx-6000ada\": \"RTX 6000Ada 48GB\", \"dual-rtx-4090\": \"Dual RTX 4090 24GB\", \"dual-rtx-5090\": \"Dual RTX 5090 32GB\", \"a100\": \"A100 SXM4 40GB\"}\n",
-    "ollama_models = {\"llama2-uncensored:7b\": \"Llama 2 uncensored 7B (3.8 GB)\", \"deepseek-r1:7b\": \"DeepSeek-R1 7B (4.7 GB)\", \"qwen2.5:14b\": \"Qwen2.5 14B (9.0 GB)\", \"phi4:14b\": \"Phi-4 14B (9.1 GB)\", \"deepseek-r1:32b\": \"DeepSeek-R1 32B (19 GB)\", \"qwen2.5:32b\": \"Qwen2.5 32B (19 GB)\", \"command-r:latest\": \"Command R 35B (18 GB)\", \"dolphin-mixtral:8x7b\": \"Dolphin Mixtral 8x7B (26 GB)\", \"deepseek-r1:70b\": \"DeepSeek-R1 70B (42 GB)\", \"llama3.3:70b\": \"Llama 3.3 70B (42 GB)\"}\n",
-    "oai_models = {\"gpt-4o\": \"ChatGPT 4o\", \"o1-mini\": \"o1-mini\", \"o1-preview\": \"o1\"}\n",
-    "models = {**oai_models, **ollama_models}\n",
-    "\n",
     "def get_text(result):\n",
     "    try:\n",
     "        return result[\"result\"][\"message\"][\"content\"]\n",
@@ -54,9 +48,6 @@
     "            return result[\"result\"][\"choices\"][0][\"message\"][\"content\"]\n",
     "        except Exception:\n",
     "            return None\n",
-    "\n",
-    "with open(\"in-prompts.json\", \"r\") as file:\n",
-    "    prompts = json.load(file)\n",
     "\n",
     "with open(\"out-results.json.log\", \"r\") as file:\n",
     "    results = []\n",
@@ -80,7 +71,7 @@
     "                \"elapsed_time\": result[\"elapsed_time\"]\n",
     "            })\n",
     "\n",
-    "df = pd.DataFrame(results).drop_duplicates(subset=[\"runner\", \"model\", \"prompt_id\"])"
+    "df = pd.DataFrame(results)"
    ]
   },
   {
