main compatible with format

--- a/main.ipynb
+++ b/main.ipynb
@@ -18,17 +18,8 @@
     "            names[item[\"key\"]] = item[\"name\"]\n",
     "        elif item[\"type\"] == \"prompt\" and item.get(\"main\"):\n",
     "            prompts[item[\"prompt_id\"]] = item[\"prompt\"]\n",
-    "        elif item[\"type\"] == \"run\":\n",
+    "        elif item[\"type\"] == \"run\" and \"result\" in item:\n",
     "            runs.append(item)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "runs"
    ]
   },
   {
