--- a/main.ipynb
+++ b/main.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
     "import json\n",
     "\n",
     "prompts, names, runs = {}, {}, []\n",
@@ -16,53 +17,15 @@
     "\n",
     "        if item[\"type\"] == \"name\":\n",
     "            names[item[\"key\"]] = item[\"name\"]\n",
-    "        elif item[\"type\"] == \"prompt\" and item.get(\"main\"):\n",
-    "            prompts[item[\"prompt_id\"]] = item[\"prompt\"]\n",
+    "        elif item[\"type\"] == \"prompt\":\n",
+    "            prompts[item[\"prompt_id\"]] = item\n",
     "        elif item[\"type\"] == \"run\" and \"result\" in item:\n",
-    "            runs.append(item)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import json\n",
+    "            result = item[\"result\"]\n",
+    "            item[\"text\"] = (result[\"choices\"][0] if \"choices\" in result else result)[\"message\"][\"content\"]\n",
+    "            item[\"len\"] = len(item[\"text\"]) + len(prompts[item[\"prompt_id\"]][\"prompt\"])\n",
+    "            runs.append(item)\n",
     "\n",
-    "def get_text(result):\n",
-    "    try:\n",
-    "        return result[\"result\"][\"message\"][\"content\"]\n",
-    "    except Exception:\n",
-    "        try:\n",
-    "            return result[\"result\"][\"choices\"][0][\"message\"][\"content\"]\n",
-    "        except Exception:\n",
-    "            return None\n",
-    "\n",
-    "with open(\"out-results.json.log\", \"r\") as file:\n",
-    "    results = []\n",
-    "\n",
-    "    for line in file:\n",
-    "        result = json.loads(line)\n",
-    "        model = result.get(\"model\")\n",
-    "        runner = \"oai\" if (model in oai_models) else result.get(\"runner\")\n",
-    "        prompt_id = result.get(\"task_id\")\n",
-    "\n",
-    "        if \"result\" in result and prompt_id in prompts_corpus and \"elapsed_time\" in result and runner in runners and model in models:\n",
-    "            results.append({\n",
-    "                \"runner\": runners[runner],\n",
-    "                \"model\": models[model],\n",
-    "                \"_runner\": runner,\n",
-    "                \"_model\": model,\n",
-    "                \"prompt_id\": prompt_id,\n",
-    "                \"prompt\": prompts[prompt_id],\n",
-    "                \"answer\": get_text(result),\n",
-    "                \"total_len\": len(prompts[prompt_id]) + len(get_text(result)),\n",
-    "                \"elapsed_time\": result[\"elapsed_time\"]\n",
-    "            })\n",
-    "\n",
-    "df = pd.DataFrame(results)"
+    "df = pd.DataFrame(runs)"
    ]
   },
   {
@@ -71,8 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_count = df.groupby([\"runner\", \"model\"]).size().reset_index(name=\"num_items\")\n",
-    "df_count.pivot(index=\"model\", columns=\"runner\", values=\"num_items\")"
+    "df.groupby([\"runner\", \"model\"]).size().reset_index(name=\"num_items\").pivot(index=\"model\", columns=\"runner\", values=\"num_items\")"
    ]
   },
   {
@@ -81,20 +43,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_filtered = df.groupby([\"runner\", \"model\"]).filter(lambda g: len(g) == len(prompts_corpus))\n",
-    "df_filtered[\"ratio\"] = df_filtered[\"total_len\"] / df_filtered[\"elapsed_time\"]\n",
+    "df[\"char_per_sec\"] = df[\"len\"] / df[\"elapsed_time\"]\n",
     "\n",
-    "df_median = df_filtered.groupby([\"runner\", \"model\"])[\"ratio\"].median().reset_index()\n",
-    "table = df_median.pivot(index=\"model\", columns=\"runner\", values=\"ratio\")\n",
+    "table = df.groupby([\"runner\", \"model\"])[\"char_per_sec\"].median().reset_index() \\\n",
+    "    .pivot(index=\"model\", columns=\"runner\", values=\"char_per_sec\")\n",
     "\n",
     "table.index.name = None\n",
     "table.columns.name = None\n",
+    "name_order = list(names.keys())\n",
     "\n",
-    "runners_sorted = [r for r in runners.values() if r in table.columns]\n",
-    "models_sorted = [r for r in models.values() if r in table.index]\n",
+    "def sort_key(value):\n",
+    "    return name_order.index(value) if value in name_order else float('inf')\n",
     "\n",
-    "table = table.loc[models_sorted, runners_sorted]\n",
-    "table.applymap(lambda x: int(x) if pd.notna(x) else \"\")"
+    "table = table.loc[sorted(table.index, key=sort_key)]\n",
+    "table = table[sorted(table.columns, key=sort_key)]\n",
+    "table.index = table.index.map(lambda x: names.get(x, x))\n",
+    "table.columns = table.columns.map(lambda x: names.get(x, x))\n",
+    "table = table.applymap(lambda x: int(x) if pd.notna(x) else \"\")\n",
+    "\n",
+    "table"
    ]
   }
  ],
