scores, table, entity

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
     "    for line in file:\n",
     "        item = json.loads(line)\n",
     "\n",
-    "        if item[\"type\"] == \"name\":\n",
+    "        if item[\"type\"] == \"entity\":\n",
     "            names[item[\"key\"]] = item[\"name\"]\n",
     "        elif item[\"type\"] == \"prompt\":\n",
     "            prompts[item[\"prompt_id\"]] = item\n",
@@ -34,19 +34,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.groupby([\"runner\", \"model\"]).size().reset_index(name=\"num_items\").pivot(index=\"model\", columns=\"runner\", values=\"num_items\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df[\"char_per_sec\"] = df[\"len\"] / df[\"elapsed_time\"]\n",
+    "df[\"metric\"] = df[\"len\"] / df[\"elapsed_time\"]\n",
     "\n",
-    "table = df.groupby([\"runner\", \"model\"])[\"char_per_sec\"].median().reset_index() \\\n",
-    "    .pivot(index=\"model\", columns=\"runner\", values=\"char_per_sec\")\n",
+    "table = df.groupby([\"runner\", \"model\"])[\"metric\"].median().reset_index() \\\n",
+    "    .pivot(index=\"model\", columns=\"runner\", values=\"metric\")\n",
     "\n",
     "table.index.name = None\n",
     "table.columns.name = None\n",
@@ -66,8 +57,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
